--- a/sleeptracker/package.json
+++ b/sleeptracker/package.json
@@ -19,8 +19,8 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
-    "@capacitor/cli": "^2.4.7",
-    "@capacitor/core": "^2.4.7",
+    "@capacitor/android": "^2.4.7",
+    "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
     "rxjs": "~6.6.0",
     "shortid": "^2.2.16",
@@ -33,6 +33,7 @@
     "@angular/compiler": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
     "@angular/language-service": "~11.2.0",
+    "@capacitor/cli": "2.4.7",
     "@ionic/angular-toolkit": "^3.1.0",
     "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
