--- a/sleeptracker/package.json
+++ b/sleeptracker/package.json
@@ -22,6 +22,7 @@
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
+    "chart.js": "^2.9.4",
     "rxjs": "~6.6.0",
     "shortid": "^2.2.16",
     "tslib": "^2.0.0",
